--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "TheYkk/config",
+  "name": "theykk/config",
   "type": "library",
   "description": "simple config class for php",
   "keywords": [
